# 3122004871

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/plagiarism_checker/: checker.py  main.py  pre.py
tests/: test_checker.py  test_main.py  test_pre.py
