[project]
name = "plagiarism-checker"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "catnaut", email = "catnaut@outlook.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
plagiarism-checker = "src/plagiarism_checker/main.py"
pc = "src/plagiarism_checker/main.py"
test = "pytest"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]